Fix breadcrumb shadow gets hidden by other divs

--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -3,4 +3,6 @@
   box-shadow: $breadcrumb-box-shadow;
   color: $breadcrumb-color;
   font-size: $breadcrumb-font-size;
+  position: relative;
+  z-index: $zindex-fixed;
 }
